#51 Adapt ReportGenerator such that it allows to send periodic state reports.